[tool.poetry]
name = "cbio-case-summarizer"
version = "0.1.0"
description = "CLI to summarize cBioPortal patient cases using OpenAI API and structured output"
authors = ["Ino de Bruijn <ino@ino.bio>"]
readme = "README.md"
packages = [{ include = "summarize_case" }]

[tool.poetry.dependencies]
python = "^3.8"
typer = { extras = ["all"], version = "^0.12.3" }
openai = "^1.30.1"
pydantic = "^1.10.13"

[tool.poetry.scripts]
summarize-case = "summarize_case:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
